# visual_servoing

./: README.md
Franka/franka_ros_learn/franka_visualization_cyh/: package.xml
franka_ros_learn/franka_moveit_cyh/: CMakeLists.txt  package.xml
franka_ros_learn/franka_moveit_cyh/config/: track_marker_cyh.yaml
franka_ros_learn/franka_moveit_cyh/launch/: track_marker_cyh.launch  track_marker_franka_control_cyh.launch
franka_ros_learn/franka_moveit_cyh/src/: marker_pose_cyh.cpp  move_group_interface_tutorial_cyh.cpp  track_marker_cyh.cpp
visual_servoing/franka_control_VS/: CMakeLists.txt  package.xml
visual_servoing/franka_control_VS/include/: franka_control_base.h  ros_DCT_VS.h  ros_DVS.h  ros_KM_VS.h  ros_VS.h
visual_servoing/franka_control_VS/launch/: DCT_VS.launch  DVS.launch  HM_VS.launch  KM_VS.launch  TM_VS.launch  camera_calibration.launch  franka_control.launch  franka_control_keyboard.launch  franka_demo.launch  publish_realsense.launch  rosbag_player_DCT.launch  save_pose_image.launch
visual_servoing/franka_control_VS/param/: 2022_11_24_17_55_55_pose_data.xls  2022_11_24_19_32_44_pose_data.xls  2022_11_26_12_43_30_pose_data.xls  2022_11_26_14_22_06_pose_data.xls  2022_11_26_14_33_59_pose_data.xls  2022_11_26_14_51_23_pose_data.xls  2022_11_29_15_19_30_pose_data.xls  2022_11_29_16_17_22_pose_data.xls  2022_11_29_16_18_27_pose_data.xls  2022_11_29_16_57_32_pose_data.xls  2022_11_29_17_04_01_pose_data.xls  2022_11_29_17_04_45_pose_data.xls  2022_11_29_17_09_01_pose_data.xls  2022_11_29_17_09_46_pose_data.xls  2022_11_29_17_26_38_pose_data.xls  2022_11_29_19_45_02_pose_data.xls  2022_11_30_11_10_54_pose_data.xls  2022_11_30_11_13_03_pose_data.xls  2022_12_01_11_05_15_pose_data.xls  2022_12_01_11_06_52_pose_data.xls  2022_12_02_17_08_02_pose_data.xls  2022_12_02_17_09_24_pose_data.xls  2022_12_02_17_11_22_pose_data.xls  2022_12_05_09_52_06_pose_data.xls  2022_12_05_09_53_49_pose_data.xls  2022_12_06_16_43_10_pose_data.xls  2022_12_06_16_44_47_pose_data.xls  2022_12_06_17_00_16_pose_data.xls  2022_12_06_17_03_16_pose_data.xls  2022_12_06_17_15_15_pose_data.xls  2022_12_06_17_22_43_pose_data.xls  2022_12_06_17_29_51_pose_data.xls  2022_12_06_17_38_38_pose_data.xls  2022_12_06_17_43_51_pose_data.xls  2022_12_06_18_49_44_pose_data.xls  2022_12_06_18_55_00_pose_data.xls  2022_12_06_19_00_25_pose_data.xls  2022_12_06_19_05_04_pose_data.xls  2022_12_06_19_12_43_pose_data.xls  2022_12_06_19_19_03_pose_data.xls  (+15 more)
visual_servoing/franka_control_VS/rviz/: franka_vs.rviz
visual_servoing/franka_control_VS/src/: control_switcher.py  franka_control_DCT_VS.cpp  franka_control_DVS.cpp  franka_control_HM_VS.cpp  franka_control_KM_VS.cpp  franka_control_TM_VS.cpp  franka_control_keyboard.cpp  publish_realsense.cpp  ros_DCT_VS.cpp  ros_DVS.cpp  ros_HM_VS.cpp  ros_KM_VS.cpp  ros_TM_VS.cpp  ros_VS.cpp  save_pose_image.cpp  save_pose_jointangle_image.cpp
visual_servoing/franka_moveit_conctrol/: CMakeLists.txt  package.xml
visual_servoing/franka_moveit_conctrol/src/: franka_moveit_conctrol.cpp
visual_servoing/franka_moveit_control/: CMakeLists.txt  package.xml
visual_servoing/franka_moveit_control/launch/: franka_moveit_control.launch  franka_moveit_control_demo.launch
visual_servoing/franka_moveit_control/src/: franka_moveit_control.cpp  marker_target_pose.cpp
visual_servoing/iiwa_control_VS/: CMakeLists.txt  package.xml
visual_servoing/iiwa_control_VS/launch/: iiwa_control.launch
visual_servoing/image_process/: CMakeLists.txt  package.xml
visual_servoing/image_process/include/: Hahn_moments_vs.h  Krawtchouk_moments_vs.h  Tchebichef_moments_vs.h  direct_microscopic_visual_servoing.h  direct_visual_servoing.h  discrete_cosine_transform_vs.h  discrete_orthogonal_moment.h  discrete_orthogonal_moment_vs.h  microscopic_visual_servoing.h  modern_robotics_lib.h  polarimetric_visual_servoing.h  visual_servoing.h
visual_servoing/image_process/launch/: DCT_VS.launch  DMVS.launch  DVS.launch  HM_VS.launch  KM_VS.launch  LUCID_L515_aligned.launch  PVS.launch  TM_VS.launch
visual_servoing/image_process/resource/: DCT_VS_experience_data_2D.mat  DCT_VS_experience_data_3D.mat  DVS_experience_data_2D.mat  DVS_experience_data_3D.mat  Figure_experience_2D.m  Figure_experience_3D.m  Figure_experience_3D_Complex.m  Figure_experience_3D_Complex_Change.m  HM_VS_experience_data_2D.mat  HM_VS_experience_data_3D.mat  HM_VS_experience_data_3D_Complex.mat  HM_VS_experience_data_3D_Complex_Change.mat  KM_VS_experience_data_2D.mat  KM_VS_experience_data_3D.mat  KM_VS_experience_data_3D_Complex.mat  TM_VS_experience_data_2D.mat  TM_VS_experience_data_3D.mat  TM_VS_experience_data_3D_Complex.mat  data_DVS_ROI_large.mat  drawCuboid.m  excel2matlab_2D_data.m  excel2matlab_3D_Complex_Change_data.m  excel2matlab_3D_Complex_data.m  excel2matlab_3D_data.m  get_pose_error_T.m
visual_servoing/image_process/src/: Hahn_moments_vs.cpp  Krawtchouk_moments_vs.cpp  Tchebichef_moments_visual_servoing.cpp  Tchebichef_moments_vs.cpp  direct_microscopic_visual_servoing.cpp  direct_visual_servoing.cpp  discrete_cosine_transform_vs.cpp  discrete_orthogonal_moment.cpp  discrete_orthogonal_moment_vs.cpp  microscopic_visual_servoing.cpp  modern_robotics_lib.cpp  polarimetric_visual_servoing.cpp  read_image_realsense.cpp  test_DCT_VS.cpp  test_DOM.cpp  test_DOM_VS.cpp  test_DVS.cpp  test_HM_VS.cpp  test_KM_VS.cpp  test_TM_VS.cpp  visual_servoing.cpp
visual_servoing/robot_control_VS/: CMakeLists.txt  package.xml
visual_servoing/robot_control_VS/cmake/: Findarena_sdk.cmake
visual_servoing/robot_control_VS/include/: control_switcher_ur.h  key.h  ros_HM_VS.h  ros_PVS.h  ros_TM_VS.h  ros_ur_DVS.h  ros_ur_PVS.h
visual_servoing/robot_control_VS/launch/: DCT_VS.launch  DVS.launch  HM_VS.launch  KM_VS.launch  PVS.launch  TM_VS.launch  camera_ur_calibration.launch  franka_DCT_VS.launch  franka_TM_VS.launch  franka_control_keyboard.launch  franka_demo.launch  franka_save_pose_image.launch  polarized_camera_calibration.launch  publish_L515_polar.launch  publish_LUCID.launch  publish_l515_polar.launch  ur_demo.launch  (+4 more)
(+245 files in other folders)
