<?xml version="1.0"?>
<package format="2">
  <name>iiwa_control_VS</name>
  <version>0.0.0</version>
  <description>The iiwa_control_VS package</description>

  <maintainer email="cyh@todo.todo">cyh</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>moveit_visual_tools</build_depend>

  <depend>eigen</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>  
  <depend>genmsg</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>rosbag</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>message_runtime</depend>
  <depend>tf</depend>
  <depend>image_process</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>diagnostic_updater</depend>
  <depend>librealsense2</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager_msgs</depend>

  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_filters</build_export_depend>

  <exec_depend>message_filters</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
