<?xml version="1.0"?>
<package format="2">
  <name>image_process</name>
  <version>0.0.0</version>
  <description>The image_process package</description>

  <maintainer email="cyh@todo.todo">cyh</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>  
  <depend>genmsg</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>message_runtime</depend>
  <depend>tf</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>diagnostic_updater</depend>
  <depend>librealsense2</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager_msgs</depend>

  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_filters</build_export_depend>

  <exec_depend>message_filters</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  
  </export>
</package>
