<?xml version="1.0"?>
<package format="2">
  <name>franka_visualization_cyh</name>
  <version>0.0.0</version>
  <description>The franka_visualization_cyh package</description>

  <maintainer email="cyh@todo.todo">cyh</maintainer>


   <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>libfranka</depend>

  <exec_depend>franka_description</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
